# django-template

./: .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  entrypoint.sh  gunicorn_config.py  pyproject.toml  start-server.sh
auth/: admin.py  models.py  serializers.py
auth/migrations/: 0001_initial.py
config/: .env  settings_override.dev.py  settings_override.prod.py
config/docker-compose/: docker-compose.override.dev.yml  docker-compose.override.prod.yaml
config/docker-compose/postgres/: README.md  docker-compose.yml
config/docker/gis/: Dockerfile  README.md
config/docker/gis/deb/: Dockerfile
config/docker/python:alpine/: Dockerfile
config/docker/python:slim/: Dockerfile
config/k8s/: daphne-svc.yaml  grpc-svc.yaml
examples/: docker-compose.override.dev.yml  settings_override.prod.py
examples/docker/: docker-compose.override.dev.yml  docker-compose.prod.dev.yaml
examples/docker/nginx-proxy/: docker-compose.yml
examples/docker/postgres/: .env  docker-compose.yml
examples/k8s/: celery-svc.yaml
general/: authentication.py  middleware.py  paginations.py  utils.py
general/backends/: solr_backends.py
project_name/: celery.py  settings.py  settings_default.py  urls.py
